container-navbar gradient color in css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -588,6 +588,7 @@ pre code {
   padding-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
+  background-image: linear-gradient(red, yellow);
 }
 
 .container-wrapper {
